--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
 
       - name: Replace API keys
         run: |
-          sed -i 's/GOOGLE_MAPS_API_KEY/${{ secrets.GOOGLE_MAPS_API_KEY }}/g' index.html
+          sed -i 's/AIzaSyCCDDPH8WFyG1doPB7eZs6YCrsB84vgO-4/${{ secrets.GOOGLE_MAPS_API_KEY }}/g' index.html
           # Add more replacements if needed, e.g.:
-          # sed -i 's/API_KEY_PLACEHOLDER/${{ secrets.OTHER_API_KEY }}/g' CasaLink.js
+          
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
